cmake_minimum_required(VERSION 3.10)
project(olimpiadi_informatica)

set(CMAKE_CXX_STANDARD 11)

add_executable(olimpiadi_informatica main.cpp esempi_libro/000_brambilla/Tests.cpp esempi_libro/000_brambilla/Solution.cpp esempi_libro/001_test_di_serie/Tests.cpp esempi_libro/001_test_di_serie/Solution.cpp)